# NUMA_MP_Exps

./: .gitignore  CMakeLists.txt  README.md
conclusions/: NUMA_access.md  NUMA_alloc.md  NUMA_mem_interference.md
src/: CMakeLists.txt
src/NUMA_access/: CMakeLists.txt  NUMA_access.c
src/NUMA_alloc/: CMakeLists.txt  NUMA_alloc.c
src/NUMA_mem_interference/: CMakeLists.txt  NUMA_mem_interference.c
